ingress2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: petshop-stage
spec:
  selector:
    # Which pods we want to expose as Istio router
    # This label points to the default one installed from file istio-demo.yaml
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    # Here we specify which Kubernetes service names
    # we want to serve through this Gateway
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: petshop-stage-service
spec:
  hosts:
  - "*"
  gateways:
  - petshop-stage
  http:
  - match:
    - uri:
        prefix: "/orders"
    - uri:
        prefix: "/api/getproducts"
    rewrite:
      uri: "/api/saveorders"
    route:
    - destination:
        host: orders-service
  - match:
    - uri:
        prefix: "/"
    - uri:
        prefix: "/api/getproducts"
    rewrite:
      uri: "/api/getproducts"
    route:
    - destination:
        host: products-service
